Fix the issue of canvas height being too large when dynamically generated elements are removed from layout. Write a short readme. Add margin to Rick and Mort Logo.
- Update Home page to update canvas resizing algorithm to return undefined when there are no selected characters to fix the bug where the canvas in PatternBackground stayed larger than layout when dynamic elements were removed from layout
- Update global styles to set height of document to 100% to let body element expand
- Update PatternBackground component to set height of the canvas to inner height of window instead of document's scroll height to fix the issue of canvas being larger than window when window itself resizes
- Update RickAndMortyLogo style to add a bottom margin to component

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -87,7 +87,8 @@
 
 html {
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  /*min-height: 100%;*/
 
   color-scheme: dark;
 }
