--- a/src/styles/rick-and-morty-logo.module.css
+++ b/src/styles/rick-and-morty-logo.module.css
@@ -1,3 +1,5 @@
 svg.rickAndMortyLogo {
   height: var(--height-ram-logo);
+  /* top | right | bottom | left */
+  margin: 0 0 var(--space-x12) 0;
 }
